Fixes some style issues on small screens

--- a/MRA.Web/wwwroot/css/site.css
+++ b/MRA.Web/wwwroot/css/site.css
@@ -19,7 +19,13 @@ body {
     width: fit-content;
     gap: var(--mr-gap-icon-text);
     align-items: center;
-    min-width: 400px;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+}
+
+.mr-filter-item {
+    width: 200px;
 }
 
 .mr-choice-filter {
